# twitch-chat-bot

./: .gitignore  pyproject.toml
src/: auth.py  chatbot.py  config.py  main.py
src/handlers/: __init__.py  farewells.py  gemini.py  goida.py  greetings.py  lasqexx.py
