[project]
name = "twitch-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "pydantic-ai-slim[duckduckgo]>=0.1.3",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.3",
    "twitchapi>=4.4.0",
]
